Modernize SnapshotDeletionPolicy and PersistentSnapshotDeletionPolicy